fix wrapper crash