@@ -192,6 +192,12 @@ public class DefaultLauncher extends Launcher {
             res.add("-javaagent:" + javaAgent);
         }
 
+        if (javaVersion.getVersion() != JavaVersion.JAVA_VERSION_8) {
+            res.add("--add-exports");
+            String pkg = version.getMainClass().substring(0, version.getMainClass().lastIndexOf("."));
+            res.add(pkg + "/" + pkg + "=ALL-UNNAMED");
+        }
+
         res.add("mio.Wrapper");
         res.add(version.getMainClass());
 
